--- a/src/main/java/com/jdmg/proyectofinalprogra3josh/ventanaTraspasos.form
+++ b/src/main/java/com/jdmg/proyectofinalprogra3josh/ventanaTraspasos.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -100,11 +100,11 @@
                   <Table columnCount="7" rowCount="4">
                     <Column editable="true" title="DEPARTAMENTO" type="java.lang.Object"/>
                     <Column editable="true" title="PLACA" type="java.lang.Object"/>
-                    <Column editable="true" title="DPI ACTUAL" type="java.lang.Object"/>
-                    <Column editable="true" title="NOMBRE ACTUAL" type="java.lang.Object"/>
-                    <Column editable="true" title="FECHA" type="java.lang.Object"/>
                     <Column editable="true" title="DPI ANTERIOR" type="java.lang.Object"/>
                     <Column editable="true" title="NOMBRE ANTERIOR" type="java.lang.Object"/>
+                    <Column editable="true" title="FECHA" type="java.lang.Object"/>
+                    <Column editable="true" title="DPI NUEVO" type="java.lang.Object"/>
+                    <Column editable="true" title="NOMBRE NUEVO" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
